Add jSpecify to datum.support package.